--- a/test_5.html
+++ b/test_5.html
@@ -21,10 +21,10 @@
     data: {
       msg: "hello"
     },
-    method:{
+    methods:{
       stopWatch(){
         console.log("aaaa")
-      //   unwatch()
+        unwatch()
       }
     }
   })
